// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Builder Expect project to be built 1`] = `
"
Account account1 = new Account();
account1.OrgMigrationId__c = '001';
account1.Name = 'xgov';
account1.BillingStreet = 'North Star Avenue';
account1.BillingCity = 'Swindon';
account1.BillingState = 'Wiltshire';
account1.BillingPostalCode = 'SN2 1SZ';
account1.BillingCountry = 'United Kingdom';
insert account1;
      
Competition__c competition0 = new Competition__c();
competition0.Acc_CompetitionCode__c = '100';
competition0.Acc_CompetitionType__c = 'KTP';
competition0.Acc_CompetitionName__c = 'Competition';
insert competition0;
      
Contact contact0 = new Contact();
contact0.ContactMigrationId__c = '001';
contact0.FirstName = 'Austria';
contact0.LastName = 'Hedges';
contact0.Email = 'austria@x.gov.uk';
contact0.AccountId = account1.Id;
contact0.Account = account1;
insert contact0;
      
User user1 = new User();
user1.Username = 'austria@x.gov.uk';
user1.Email = 'austria@x.gov.uk';
user1.FirstName = 'Austria';
user1.LastName = 'Hedges';
user1.Alias = 'xgovuk';
user1.CommunityNickname = 'austria';
user1.EmailEncodingKey = 'UTF-8';
user1.LocaleSidKey = 'en_GB';
user1.LanguageLocaleKey = 'en_US';
user1.TimeZoneSidKey = 'Europe/London';
user1.ProfileId = '00e58000001ITpLAAW';
user1.ContactId = contact0.Id;
user1.Contact = contact0;
insert user1;
      
// Disable any validation related to projects.
Acc_Global_Validator.bypassProject();

Acc_Project__c project1 = new Acc_Project__c();
project1.Acc_CompetitionId__c = competition0.Id;
project1.Acc_CompetitionId__r = competition0;
project1.Acc_StartDate__c = date.valueOf('2024-01-16 12:59:42');
project1.Acc_Duration__c = 36;
project1.Acc_ProjectTitle__c = 'Title';
// project1.Acc_TSBProjectNumber__c field is not defined
project1.Acc_LegacyID__c = '100';
// project1.Acc_ProjectSource__c field is not defined
// project1.Acc_PublicDescription__c field is not defined
// project1.Acc_ProjectSummary__c field is not defined
project1.Acc_WorkdayProjectSetupComplete__c = true;

insert project1;
Formula.recalculateFormulas(new List<Acc_Project__c> { project1 });

Acc_ProjectParticipant__c projectParticipant2 = new Acc_ProjectParticipant__c();
projectParticipant2.ParticipantMigrationID__c = '004001';
projectParticipant2.Acc_ParticipantType__c = 'Business';
projectParticipant2.Acc_ParticipantSize__c = 'Medium';
projectParticipant2.Acc_ProjectRole__c = 'Lead';
projectParticipant2.Acc_AuditReportFrequency__c = 'With all claims';
projectParticipant2.Acc_ParticipantStatus__c = 'Active';
projectParticipant2.Acc_Award_Rate__c = 50;
projectParticipant2.Acc_Cap_Limit__c = 50;
projectParticipant2.Acc_FlaggedParticipant__c = false;
projectParticipant2.Acc_OverheadRate__c = 20;
projectParticipant2.Acc_ParticipantProjectReportingType__c = 'Public';
projectParticipant2.Acc_OrganisationType__c = 'Industrial';
projectParticipant2.Acc_CreateProfiles__c = false;
projectParticipant2.Acc_CreateClaims__c = false;
projectParticipant2.Acc_ProjectId__c = project1.Id;
projectParticipant2.Acc_ProjectId__r = project1;
projectParticipant2.Acc_AccountId__c = account1.Id;
projectParticipant2.Acc_AccountId__r = account1;
insert projectParticipant2;
      
Acc_ProjectContactLink__c pcl0 = new Acc_ProjectContactLink__c();
pcl0.Acc_Role__c = 'Monitoring officer';
pcl0.Acc_EmailOfSFContact__c = 'noemail@noemail.com';
pcl0.Acc_ProjectId__c = project1.Id;
pcl0.Acc_ProjectId__r = project1;
pcl0.Acc_AccountId__c = account1.Id;
pcl0.Acc_AccountId__r = account1;
pcl0.Acc_ContactId__c = contact0.Id;
pcl0.Acc_ContactId__r = contact0;
// pcl0.Acc_UserId__c relationship is not defined
insert pcl0;
      
project1.Acc_ClaimFrequency__c = 'Quarterly';
project1.Acc_NonFEC__c = false;
project1.Acc_MonitoringLevel__c = 'Platinum';
project1.Acc_MonitoringReportSchedule__c = 'Monthly';
project1.Acc_ProjectStatus__c = 'Live';
// project1.Acc_CurrentPeriodNumberHelper__c field is not defined
upsert project1;
ProjectTriggerHelper.isFirstTime = true;
new Acc_ProjectPeriodProcessor_Batch().start(null);
        "
`;

exports[`Project Builder Expect project to be built with prefix 1`] = `
"
Account account1 = new Account();
account1.OrgMigrationId__c = 'hello.001';
account1.Name = 'xgov';
account1.BillingStreet = 'North Star Avenue';
account1.BillingCity = 'Swindon';
account1.BillingState = 'Wiltshire';
account1.BillingPostalCode = 'SN2 1SZ';
account1.BillingCountry = 'United Kingdom';
insert account1;
      
Competition__c competition0 = new Competition__c();
competition0.Acc_CompetitionCode__c = 'hello.100';
competition0.Acc_CompetitionType__c = 'KTP';
competition0.Acc_CompetitionName__c = 'Competition';
insert competition0;
      
Contact contact0 = new Contact();
contact0.ContactMigrationId__c = 'hello.001';
contact0.FirstName = 'Austria';
contact0.LastName = 'Hedges';
contact0.Email = 'hello.austria@x.gov.uk';
contact0.AccountId = account1.Id;
contact0.Account = account1;
insert contact0;
      
User user1 = new User();
user1.Username = 'hello.austria@x.gov.uk';
user1.Email = 'hello.austria@x.gov.uk';
user1.FirstName = 'Austria';
user1.LastName = 'Hedges';
user1.Alias = 'xgovuk';
user1.CommunityNickname = 'hello.austria';
user1.EmailEncodingKey = 'UTF-8';
user1.LocaleSidKey = 'en_GB';
user1.LanguageLocaleKey = 'en_US';
user1.TimeZoneSidKey = 'Europe/London';
user1.ProfileId = '00e58000001ITpLAAW';
user1.ContactId = contact0.Id;
user1.Contact = contact0;
insert user1;
      
// Disable any validation related to projects.
Acc_Global_Validator.bypassProject();

Acc_Project__c project1 = new Acc_Project__c();
project1.Acc_CompetitionId__c = competition0.Id;
project1.Acc_CompetitionId__r = competition0;
project1.Acc_StartDate__c = date.valueOf('2024-01-16 12:59:42');
project1.Acc_Duration__c = 36;
project1.Acc_ProjectTitle__c = 'Title';
// project1.Acc_TSBProjectNumber__c field is not defined
project1.Acc_LegacyID__c = 'hello.100';
// project1.Acc_ProjectSource__c field is not defined
// project1.Acc_PublicDescription__c field is not defined
// project1.Acc_ProjectSummary__c field is not defined
project1.Acc_WorkdayProjectSetupComplete__c = true;

insert project1;
Formula.recalculateFormulas(new List<Acc_Project__c> { project1 });

Acc_ProjectParticipant__c projectParticipant2 = new Acc_ProjectParticipant__c();
projectParticipant2.ParticipantMigrationID__c = 'hello.004001';
projectParticipant2.Acc_ParticipantType__c = 'Business';
projectParticipant2.Acc_ParticipantSize__c = 'Medium';
projectParticipant2.Acc_ProjectRole__c = 'Lead';
projectParticipant2.Acc_AuditReportFrequency__c = 'With all claims';
projectParticipant2.Acc_ParticipantStatus__c = 'Active';
projectParticipant2.Acc_Award_Rate__c = 50;
projectParticipant2.Acc_Cap_Limit__c = 50;
projectParticipant2.Acc_FlaggedParticipant__c = false;
projectParticipant2.Acc_OverheadRate__c = 20;
projectParticipant2.Acc_ParticipantProjectReportingType__c = 'Public';
projectParticipant2.Acc_OrganisationType__c = 'Industrial';
projectParticipant2.Acc_CreateProfiles__c = false;
projectParticipant2.Acc_CreateClaims__c = false;
projectParticipant2.Acc_ProjectId__c = project1.Id;
projectParticipant2.Acc_ProjectId__r = project1;
projectParticipant2.Acc_AccountId__c = account1.Id;
projectParticipant2.Acc_AccountId__r = account1;
insert projectParticipant2;
      
Acc_ProjectContactLink__c pcl0 = new Acc_ProjectContactLink__c();
pcl0.Acc_Role__c = 'Monitoring officer';
pcl0.Acc_EmailOfSFContact__c = 'hello.noemail@noemail.com';
pcl0.Acc_ProjectId__c = project1.Id;
pcl0.Acc_ProjectId__r = project1;
pcl0.Acc_AccountId__c = account1.Id;
pcl0.Acc_AccountId__r = account1;
pcl0.Acc_ContactId__c = contact0.Id;
pcl0.Acc_ContactId__r = contact0;
// pcl0.Acc_UserId__c relationship is not defined
insert pcl0;
      
project1.Acc_ClaimFrequency__c = 'Quarterly';
project1.Acc_NonFEC__c = false;
project1.Acc_MonitoringLevel__c = 'Platinum';
project1.Acc_MonitoringReportSchedule__c = 'Monthly';
project1.Acc_ProjectStatus__c = 'Live';
// project1.Acc_CurrentPeriodNumberHelper__c field is not defined
upsert project1;
ProjectTriggerHelper.isFirstTime = true;
new Acc_ProjectPeriodProcessor_Batch().start(null);
        "
`;

exports[`Project Builder Expect project to be built with profiles 1`] = `
"
Account account1 = new Account();
account1.OrgMigrationId__c = '001';
account1.Name = 'xgov';
account1.BillingStreet = 'North Star Avenue';
account1.BillingCity = 'Swindon';
account1.BillingState = 'Wiltshire';
account1.BillingPostalCode = 'SN2 1SZ';
account1.BillingCountry = 'United Kingdom';
insert account1;
      
Competition__c competition0 = new Competition__c();
competition0.Acc_CompetitionCode__c = '100';
competition0.Acc_CompetitionType__c = 'KTP';
competition0.Acc_CompetitionName__c = 'Competition';
insert competition0;
      
Contact contact0 = new Contact();
contact0.ContactMigrationId__c = '001';
contact0.FirstName = 'Austria';
contact0.LastName = 'Hedges';
contact0.Email = 'austria@x.gov.uk';
contact0.AccountId = account1.Id;
contact0.Account = account1;
insert contact0;
      
User user1 = new User();
user1.Username = 'austria@x.gov.uk';
user1.Email = 'austria@x.gov.uk';
user1.FirstName = 'Austria';
user1.LastName = 'Hedges';
user1.Alias = 'xgovuk';
user1.CommunityNickname = 'austria';
user1.EmailEncodingKey = 'UTF-8';
user1.LocaleSidKey = 'en_GB';
user1.LanguageLocaleKey = 'en_US';
user1.TimeZoneSidKey = 'Europe/London';
user1.ProfileId = '00e58000001ITpLAAW';
user1.ContactId = contact0.Id;
user1.Contact = contact0;
insert user1;
      
// Disable any validation related to projects.
Acc_Global_Validator.bypassProject();

Acc_Project__c project1 = new Acc_Project__c();
project1.Acc_CompetitionId__c = competition0.Id;
project1.Acc_CompetitionId__r = competition0;
project1.Acc_StartDate__c = date.valueOf('2024-01-16 12:59:42');
project1.Acc_Duration__c = 36;
project1.Acc_ProjectTitle__c = 'Title';
// project1.Acc_TSBProjectNumber__c field is not defined
project1.Acc_LegacyID__c = '100';
// project1.Acc_ProjectSource__c field is not defined
// project1.Acc_PublicDescription__c field is not defined
// project1.Acc_ProjectSummary__c field is not defined
project1.Acc_WorkdayProjectSetupComplete__c = true;

insert project1;
Formula.recalculateFormulas(new List<Acc_Project__c> { project1 });

Acc_ProjectParticipant__c projectParticipant2 = new Acc_ProjectParticipant__c();
projectParticipant2.ParticipantMigrationID__c = '004001';
projectParticipant2.Acc_ParticipantType__c = 'Business';
projectParticipant2.Acc_ParticipantSize__c = 'Medium';
projectParticipant2.Acc_ProjectRole__c = 'Lead';
projectParticipant2.Acc_AuditReportFrequency__c = 'With all claims';
projectParticipant2.Acc_ParticipantStatus__c = 'Active';
projectParticipant2.Acc_Award_Rate__c = 50;
projectParticipant2.Acc_Cap_Limit__c = 50;
projectParticipant2.Acc_FlaggedParticipant__c = false;
projectParticipant2.Acc_OverheadRate__c = 20;
projectParticipant2.Acc_ParticipantProjectReportingType__c = 'Public';
projectParticipant2.Acc_OrganisationType__c = 'Industrial';
projectParticipant2.Acc_CreateProfiles__c = false;
projectParticipant2.Acc_CreateClaims__c = false;
projectParticipant2.Acc_ProjectId__c = project1.Id;
projectParticipant2.Acc_ProjectId__r = project1;
projectParticipant2.Acc_AccountId__c = account1.Id;
projectParticipant2.Acc_AccountId__r = account1;
insert projectParticipant2;
      
Acc_ProjectContactLink__c pcl0 = new Acc_ProjectContactLink__c();
pcl0.Acc_Role__c = 'Monitoring officer';
pcl0.Acc_EmailOfSFContact__c = 'noemail@noemail.com';
pcl0.Acc_ProjectId__c = project1.Id;
pcl0.Acc_ProjectId__r = project1;
pcl0.Acc_AccountId__c = account1.Id;
pcl0.Acc_AccountId__r = account1;
pcl0.Acc_ContactId__c = contact0.Id;
pcl0.Acc_ContactId__r = contact0;
// pcl0.Acc_UserId__c relationship is not defined
insert pcl0;
      
List<Acc_CostCategory__c> allProfiles0CostCategoriesList = [
  SELECT
    Id,
    Acc_CompetitionType__c,
    Acc_CostCategoryName__c,
    Acc_OrganisationType__c
  FROM
    Acc_CostCategory__c
  WHERE
    Acc_CompetitionType__c = :competition0.Acc_CompetitionType__c AND
    Acc_OrganisationType__c = :projectParticipant2.Acc_OrganisationType__c
];

List<Acc_Profile__c> allProfiles0ProfileDetailList = new List<Acc_Profile__c>();
List<Acc_Profile__c> allProfiles0ProfileCostCatList = new List<Acc_Profile__c>();
List<Acc_Profile__c> allProfiles0ProfileEmptyList = new List<Acc_Profile__c>();
List<Acc_Claims__c> allProfiles0ClaimProjectPeriodList = new List<Acc_Claims__c>();
Id allProfiles0ProfileTotalCostCategoryRecordTypeId = Schema.SObjectType.Acc_Profile__c.getRecordTypeInfosByName().get('Total Cost Category').getRecordTypeId();
Id allProfiles0ProfileDetailRecordTypeId = Schema.SObjectType.Acc_Profile__c.getRecordTypeInfosByName().get('Profile Detail').getRecordTypeId();
Id allProfiles0ClaimTotalProjectPeriodRecordTypeId = Schema.SObjectType.Acc_Claims__c.getRecordTypeInfosByName().get('Total Project Period').getRecordTypeId();

/**
 * Lookup functions
 * Does not include profile total project periods, as those are created later.
 */
public class allProfiles0CannotFindClaimOrProfileException extends Exception {}

Acc_Profile__c allProfiles0ProfileCostCategory(String costCategory) {
  for (Acc_Profile__c profile : allProfiles0ProfileCostCatList) {
    if (profile.Acc_CostCategory__r.Acc_CostCategoryName__c == costCategory) {
      return profile;
    }
  }

  throw new allProfiles0CannotFindClaimOrProfileException('Cannot find Profile Cost Category for ' + costCategory + ' in the list of ' + allProfiles0ProfileCostCatList.size() + ' profiles.');
}

Acc_Profile__c allProfiles0ProfileDetail(String costCategory, Integer periodId) {
  for (Acc_Profile__c profile : allProfiles0ProfileDetailList) {
    if (profile.Acc_CostCategory__r.Acc_CostCategoryName__c == costCategory && profile.Acc_ProjectPeriodNumber__c == periodId) {
      return profile;
    }
  }

  throw new allProfiles0CannotFindClaimOrProfileException('Cannot find Profile Detail for ' + costCategory + ' period ' + periodId + ' in the list of ' + allProfiles0ProfileDetailList.size() + ' profiles.');
}

for (Integer i = 0; i < undefined; i++) {
  Acc_Claims__c totalProjectPeriod = new Acc_Claims__c();
  totalProjectPeriod.Acc_ProjectPeriodNumber__c = i + 1;
  totalProjectPeriod.RecordTypeId = allProfiles0ClaimTotalProjectPeriodRecordTypeId;
  totalProjectPeriod.Acc_ProjectParticipant__c = projectParticipant2.Id;
  totalProjectPeriod.Acc_ProjectParticipant__r = projectParticipant2;
  totalProjectPeriod.Acc_ClaimStatus__c = 'New';
  allProfiles0ClaimProjectPeriodList.add(totalProjectPeriod);
}

for (Acc_CostCategory__c costCategory : allProfiles0CostCategoriesList) {
  Acc_Profile__c profileCostCategory = new Acc_Profile__c();
  profileCostCategory.Acc_InitialForecastCost__c = 0;
  profileCostCategory.Acc_LatestForecastCost__c = 0;
  profileCostCategory.Acc_ProjectParticipant__c = projectParticipant2.Id;
  profileCostCategory.Acc_ProjectParticipant__r = projectParticipant2;
  profileCostCategory.Acc_CostCategory__c = costCategory.Id;
  profileCostCategory.Acc_CostCategory__r = costCategory;
  profileCostCategory.RecordTypeId = allProfiles0ProfileTotalCostCategoryRecordTypeId;
  allProfiles0ProfileCostCatList.add(profileCostCategory);

  for (Integer i = 0; i < undefined; i++) {
    Acc_Profile__c profileDetail = new Acc_Profile__c();
    profileDetail.Acc_ProjectPeriodNumber__c = i + 1;
    profileDetail.Acc_InitialForecastCost__c = 0;
    profileDetail.Acc_LatestForecastCost__c = 0;
    profileDetail.Acc_ProjectParticipant__c = projectParticipant2.Id;
    profileDetail.Acc_ProjectParticipant__r = projectParticipant2;
    profileDetail.Acc_CostCategory__c = costCategory.Id;
    profileDetail.Acc_CostCategory__r = costCategory;
    profileDetail.RecordTypeId = allProfiles0ProfileDetailRecordTypeId;
    allProfiles0ProfileDetailList.add(profileDetail);
  }
}

Acc_CreateProfileProcessor allProfiles0createProfileProcessor = new Acc_CreateProfileProcessor();
List<Acc_Profile__c> allProfiles0ProfileProjectPeriodList = allProfiles0createProfileProcessor.runTotalProjectPeriodCreationProcess(allProfiles0ProfileDetailList, allProfiles0ProfileEmptyList);

Acc_Claims__c allProfiles0ClaimProjectPeriod(Integer periodId) {
  for (Acc_Claims__c claim : allProfiles0ClaimProjectPeriodList) {
    if (claim.Acc_ProjectPeriodNumber__c == periodId) {
      return claim;
    }
  }

  throw new allProfiles0CannotFindClaimOrProfileException('Cannot find Claim Total Project Period for period ' + periodId + ' in the list of ' + allProfiles0ClaimProjectPeriodList.size() + ' claims.');
}

Acc_Profile__c allProfiles0ProfileProjectPeriod(Integer periodId) {
  for (Acc_Profile__c profile : allProfiles0ProfileProjectPeriodList) {
    if (profile.Acc_ProjectPeriodNumber__c == periodId) {
      return profile;
    }
  }

  throw new allProfiles0CannotFindClaimOrProfileException('Cannot find Profile Total Project Period for period ' + periodId + ' in the list of ' + allProfiles0ProfileProjectPeriodList.size() + ' profiles.');
}
        
Acc_Profile__c profileDetail0 = allProfiles0ProfileDetail('Labour', 4);
profileDetail0.Acc_InitialForecastCost__c = 200;
profileDetail0.Acc_LatestForecastCost__c = 210.49;
    
ProfileTriggerHandler.isTriggerDisabled = TRUE;
List<Acc_Profile__c> allProfiles0ProfileCombinedList = new List<Acc_Profile__c>();
allProfiles0ProfileCombinedList.addAll(allProfiles0ProfileCostCatList);
allProfiles0ProfileCombinedList.addAll(allProfiles0ProfileProjectPeriodList);
allProfiles0ProfileCombinedList.addAll(allProfiles0ProfileDetailList);
insert allProfiles0ProfileCombinedList;
insert allProfiles0ClaimProjectPeriodList;
        
project1.Acc_ClaimFrequency__c = 'Quarterly';
project1.Acc_NonFEC__c = false;
project1.Acc_MonitoringLevel__c = 'Platinum';
project1.Acc_MonitoringReportSchedule__c = 'Monthly';
project1.Acc_ProjectStatus__c = 'Live';
// project1.Acc_CurrentPeriodNumberHelper__c field is not defined
upsert project1;
ProjectTriggerHelper.isFirstTime = true;
new Acc_ProjectPeriodProcessor_Batch().start(null);
        "
`;

exports[`Project Builder Expect project to be built, linking correctly to competition 1`] = `
"
Competition__c competition0 = new Competition__c();
competition0.Acc_CompetitionCode__c = '100';
competition0.Acc_CompetitionType__c = 'KTP';
competition0.Acc_CompetitionName__c = 'Competition';
insert competition0;
      
// Disable any validation related to projects.
Acc_Global_Validator.bypassProject();

Acc_Project__c project1 = new Acc_Project__c();
project1.Acc_CompetitionId__c = competition0.Id;
project1.Acc_CompetitionId__r = competition0;
project1.Acc_StartDate__c = date.valueOf('2024-01-16 12:59:42');
project1.Acc_Duration__c = 36;
project1.Acc_ProjectTitle__c = 'Title';
// project1.Acc_TSBProjectNumber__c field is not defined
project1.Acc_LegacyID__c = '100';
// project1.Acc_ProjectSource__c field is not defined
// project1.Acc_PublicDescription__c field is not defined
// project1.Acc_ProjectSummary__c field is not defined
project1.Acc_WorkdayProjectSetupComplete__c = true;

insert project1;
Formula.recalculateFormulas(new List<Acc_Project__c> { project1 });

project1.Acc_ClaimFrequency__c = 'Quarterly';
project1.Acc_NonFEC__c = false;
project1.Acc_MonitoringLevel__c = 'Platinum';
project1.Acc_MonitoringReportSchedule__c = 'Monthly';
project1.Acc_ProjectStatus__c = 'Live';
// project1.Acc_CurrentPeriodNumberHelper__c field is not defined
upsert project1;
ProjectTriggerHelper.isFirstTime = true;
new Acc_ProjectPeriodProcessor_Batch().start(null);
        "
`;
